<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/s_o_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/product_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/s_0_wei"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="135dp"
        android:text="@string/weightss"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/s_o_pac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/quantity_packetss"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aoproductnamebox" />

    <TextView
        android:id="@+id/s_o_bud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:text="@string/budgeta"
        app:layout_constraintStart_toEndOf="@+id/s_o_pac"
        app:layout_constraintTop_toBottomOf="@+id/aoweightbox" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="111dp"
        android:layout_height="55dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:text="@string/delete"
        app:layout_constraintStart_toEndOf="@+id/aobudgetbox"
        app:layout_constraintTop_toBottomOf="@+id/aoweightbox" />

    <EditText
        android:id="@+id/aoproductnamebox"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="Ceylon Tea"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s_o_product" />

    <EditText
        android:id="@+id/aoweightbox"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:hint="6kg"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s_0_wei" />

    <EditText
        android:id="@+id/aoquantitybox"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/s_o_pac" />

    <EditText
        android:id="@+id/aobudgetbox"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="12$"
        app:layout_constraintStart_toEndOf="@+id/aoquantitybox"
        app:layout_constraintTop_toBottomOf="@+id/s_o_bud" />


</androidx.constraintlayout.widget.ConstraintLayout>